fix: background image

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <section class="background">
-        <img class="grayscale" src="/img/background.jpeg" alt="technology components">
+        <img class="grayscale" src="./img/background.jpeg" alt="technology components">
     </section>
     <header>
         <nav>
